--- a/css/style.css
+++ b/css/style.css
@@ -1561,7 +1561,8 @@ body.active {
     position: absolute;
     top: 10px;
     left: 10px;
-    max-width: 60%;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .label {
@@ -2467,11 +2468,10 @@ a.footer__nav-link--show {
 }
 
 .product-box__inner {
-    display: grid;
-    grid-template-columns: 522px 1fr;
-    grid-template-rows: 606px;
     gap: 85px;
     margin-top: 25px;
+    display: flex;
+    max-height: 606px;
 }
 
 .product-box__gallery {
@@ -2479,10 +2479,13 @@ a.footer__nav-link--show {
     position: relative;
 }
 
+.product-box__name-box .product-box__tools {
+    display: none;
+}
+
 .product-box__name {
     text-transform: uppercase;
     font-size: 35px;
-    line-height: 42px;
     font-weight: 600;
 }
 
@@ -2495,6 +2498,10 @@ a.footer__nav-link--show {
 .product-box__additional * {
     font-size: 12px;
     color: var(--subtitle-color);
+}
+
+.product-box__additional span {
+    font-weight: 500;
 }
 
 .slider-fastview .slider-fastview-slide,
@@ -2524,6 +2531,7 @@ a.footer__nav-link--show {
     width: 100%;
     height: 100%;
     border-radius: 10px;
+    object-fit: contain;
 }
 
 .slider-fastview-slide img.country,
@@ -2563,6 +2571,12 @@ a.footer__nav-link--show {
     border: 2px solid var(--main-blue);
 }
 
+.product-box__info {
+    display: grid;
+    gap: 13px 42px;
+    grid-template-columns: 60% calc(40% - 42px);
+}
+
 .product-box__header {
     display: flex;
     gap: 0 42px;
@@ -2572,7 +2586,6 @@ a.footer__nav-link--show {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 475px;
 }
 
 .product-box__available {
@@ -2600,7 +2613,6 @@ a.footer__nav-link--show {
 .product-box__brand {
     display: flex;
     justify-content: center;
-    margin-left: calc(277px/4);
 }
 
 .product-box__brand-link {
@@ -2610,13 +2622,6 @@ a.footer__nav-link--show {
 .product-box__brand-link img {
     filter: grayscale(1);
     transition: var(--default-transition);
-}
-
-.product-box__items {
-    display: grid;
-    grid-template-columns: 475px 277px;
-    grid-template-rows: 282px 233px;
-    gap: 23px 42px;
 }
 
 .product-box__item {
@@ -2639,6 +2644,10 @@ a.footer__nav-link--show {
     font-weight: 600;
     font-size: 35px;
     line-height: 1.3;
+}
+
+.product-box__cost .price:not(:first-child) {
+    margin-top: 5px;
 }
 
 .product-box__cost .price-type {
@@ -2676,7 +2685,7 @@ a.footer__nav-link--show {
 }
 
 .product-box__price-buttons .rect-btn {
-    width: 197px;
+    width: 50%;
     font-size: 16px;
     line-height: 1.5;
     font-weight: 400;
@@ -2722,7 +2731,6 @@ a.footer__nav-link--show {
     padding: 18px 22px;
     background-color: #fff;
     border-radius: 10px;
-    margin-top: 15px;
 }
 
 .product-box__colors-title .value {
@@ -2735,7 +2743,6 @@ a.footer__nav-link--show {
     margin-top: 20px;
     gap: 15px;
     position: relative;
-    justify-content: space-between;
 }
 
 .frame {
@@ -2803,6 +2810,7 @@ a.footer__nav-link--show {
 
 .product-box__properties-item {
     display: flex;
+    align-items: flex-end;
     gap: 0 10px;
 }
 
@@ -2833,6 +2841,9 @@ a.footer__nav-link--show {
 
 .product-box__item--delivery {
     background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .product-box__delivery-options {
@@ -2871,14 +2882,14 @@ a.footer__nav-link--show {
 
 .zoom-box {
     position: absolute;
-    width: 522px;
+    width: 100%;
     height: 522px;
 }
 
 .zoom-img {
     position: absolute;
-    width: 522px;
-    height: 522px;
+    width: 100%;
+    height: 100%;
     z-index: 5;
 }
 
