--- a/css/media.css
+++ b/css/media.css
@@ -97,6 +97,9 @@
     .info {
         padding: 25px 0;
     }
+    .recs-list {
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
 
 @media (max-width: 1400px) {
@@ -297,6 +300,9 @@
     }
     .product-info__doc-name {
         font-size: 12px;
+    }
+    .recs-list {
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
@@ -722,6 +728,12 @@
     }
     .product-tabs__item.active label {
         background-color: var(--main-blue);
+    }
+    .recs-list {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .product-card:last-child {
+        display: none;
     }
 }
 
