--- a/css/cart.css
+++ b/css/cart.css
@@ -10,7 +10,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 70px 0 143px 0;
+    padding: 70px 0 0 0;
 }
 
 .cart-empty img {
