--- a/css/catalog.css
+++ b/css/catalog.css
@@ -1,821 +1,38 @@
-/* CATALOG START*/
-
 .catalog {
-    padding-bottom: 50px;
+    padding: 20px 0 50px;
 }
 
-.catalog__inner {
-    display: flex;
-    gap: 0 20px;
-    align-items: flex-start;
-}
-
-.aside {
-    min-width: 260px;
-    transition: var(--alt-transition);
-}
-
-.aside.scroll {
-    top: 88px;
-}
-
-.filter {
-    position: relative;
-}
-
-.filter-title {
-    font-size: 24px;
-    line-height: 1.5;
-}
-
-.filter-items {
-    margin-top: 50px;
-    position: relative;
-}
-
-.filter-item {
-    background-color: var(--filter-bg-color);
-    border-radius: 10px;
-}
-
-.filter-item+.filter-item {
-    margin-top: 10px;
-}
-
-.filter-item.collapse .filter-item__props {
-    max-height: 83px;
-}
-
-
-
-.filter-item.hidden .filter-item__header::after {
-    transform: rotate(180deg);
-}
-
-.filter-item.check .filter-item__list {
-    padding: 20px;
-}
-
-.filter-item.check .filter-item__value span {
-    font-size: 16px;
-    line-height: 1.5;
-}
-
-.filter-item.expand .filter-item__props {
-    max-height: none;
-}
-
-.filter-item.hidden .filter-item__props,
-.filter-item.hidden .filter-item__footer {
-    max-height: 0;
-    padding: 0;
-    overflow: hidden;
-}
-
-.filter-item__props {
-    transition: var(--alt-transition);
-    height: 100%;
-    max-height: 103px;
-    overflow: hidden;
-}
-
-.filter-item__header {
-    width: 100%;
-    text-align: left;
-    position: relative;
-    padding: 20px 20px 15px 37px;
-    font-size: 18px;
-    line-height: 1.5;
-}
-
-.filter-item__header::after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 20px;
-    background: url('../img/icons/arrow-filter.svg') center center / cover no-repeat;
-    width: 9px;
-    height: 6px;
-    transition: all .3s;
-}
-
-.filter-item__list {
-    padding: 0 20px 20px;
-}
-
-.filter-item__value+.filter-item__value {
-    margin-top: 10px;
-}
-
-.filter-item__value input[type=checkbox] {
-    position: absolute;
-    z-index: -1;
-    opacity: 0;
-}
-
-.filter-item__label {
-    position: relative;
-    font-size: 14px;
-    line-height: 1.5;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    padding-left: 26px;
-}
-
-.filter-item__label span.filter-count {
-    margin-left: auto;
-    color: var(--main-blue);
-}
-
-.filter-item__label::before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 0;
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    border: 1px solid var(--subtitle-color);
-    border-radius: 2px;
-    background-color: #fff;
-}
-
-.filter-item__label::after {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 2px;
-    content: '';
-    width: 11px;
-    height: 9px;
-    background: url('../img/icons/check.svg') center center / cover no-repeat;
-    transition: var(--alt-transition);
-    opacity: 0;
-}
-
-.filter-item__label.price,
-.filter-item__label.price {
-    padding: 0;
-}
-
-.filter-item__label.price::before,
-.filter-item__label.price::after {
-    display: none;
-}
-
-.filter-item__value input:checked+label::after {
-    opacity: 1;
-}
-
-.filter-item__inputs {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 15px;
-}
-
-.filter-item__input {
-    width: 80px;
-    height: 35px;
-    border: 1px solid #EAEBED;
-    outline: none;
-    text-align: center;
-    font-size: 16px;
-    line-height: 1.5;
-    padding: 0 10px;
-}
-
-.filter-item__slider {
-    margin-top: 15px;
-}
-
-.noUi-target {
-    background: #EAEBED;
-    border: none;
-    box-shadow: none;
-    height: 2px;
-    cursor: pointer;
-}
-
-.noUi-connect {
-    background: var(--main-blue);
-}
-
-.noUi-horizontal .noUi-handle {
-    border: none;
-    box-shadow: none;
-    width: 18px;
-    height: 18px;
-    border-radius: 50%;
-    background: var(--main-blue);
-    top: -8px;
-    cursor: pointer;
-}
-
-.noUi-horizontal .noUi-handle-upper {
-    right: 0;
-}
-
-.noUi-horizontal .noUi-handle-lower {
-    right: -16px;
-}
-
-.noUi-handle::after,
-.noUi-handle::before {
-    display: none;
-}
-
-.filter-items-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-}
-
-.filter-items-show-filters {
-    position: relative;
-    font-size: 16px;
-    line-height: 1.5;
-    font-weight: 500;
-    text-align: center;
-    color: var(--main-blue);
-}
-
-.filter-items-show-filters::after {
-    content: '';
-    position: absolute;
-    left: calc(100% + 5px);
-    top: 50%;
-    background: url('../img/icons/arrow-fliter-blue.svg') center center / cover no-repeat;
-    width: 9px;
-    height: 7px;
-    transform: translateY(-50%);
-}
-
-.filter-items-show-filters.expand::after {
-    transform: rotate(180deg) translateY(50%);
-}
-
-.filter-items__show-results {
-    font-size: 16px;
-    line-height: 1.5;
-    position: absolute;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px 35px;
-    left: calc(100% + 10px);
-    z-index: 920;
-}
-
-.filter-items__show-results::before {
-    content: '';
-    position: absolute;
-    width: 8px;
-    height: 8px;
-    background-color: var(--main-blue);
-    left: -4px;
-    transform: rotate(45deg);
-    transition: var(--default-transition);
-}
-
-.filter-item__footer {
-    color: var(--main-blue);
-    font-weight: 500;
-    text-align: center;
-    width: 100%;
-    padding-bottom: 20px;
-    position: relative;
-    transition: var(--alt-transition);
-    margin-top: 10px;
-}
-
-.filter-item__btn::after {
-    content: '';
-    position: absolute;
-    background: url('../img/icons/arrow-filter-blue.svg') center center / cover no-repeat;
-    width: 9px;
-    height: 7px;
-    transform: translate(5px, 100%) rotate(0deg);
-    transition: var(--default-transition);
-}
-
-.oval-btn--filter {
-    width: 100%;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    padding: 10px 0;
-}
-
-.oval-btn--filter.show {
-    margin-top: 25px;
-    position: relative;
-    margin-top: 10px;
-    border: 1px solid var(--main-blue);
-    position: relative;
-    overflow: hidden;
-}
-
-.oval-btn--filter.reset {
-    margin-top: 10px;
-}
-
-.catalog__promo {
-    margin-top: 25px;
-}
-
-.promo-box {
-    background-color: var(--main-black);
-    border-radius: 10px;
-}
-
-.promo-box__header {
-    padding: 20px 20px 15px;
-    border-bottom: 1px solid var(--text-grey-color);
-}
-
-.promo-box__title {
-    font-size: 18px;
-    line-height: 1.5;
-    font-weight: 500;
-    color: #fff;
-}
-
-.promo-box__content {
-    display: flex;
-    align-items: center;
-    padding: 15px 20px 20px;
-    gap: 20px;
-}
-
-.promo-box__img {
-    width: 60px;
-    height: 60px;
-    border-radius: 10px;
-    background-color: #d9d9d9;
-}
-
-.promo-box__descr p {
-    color: #fff;
-    font-size: 16px;
-    line-height: 1.5;
-}
-
-.promo-box__descr .promo-box__price {
-    font-size: 20px;
-    line-height: 1.5;
-    font-weight: 500;
-}
-
-.promo-feedback {
-    position: relative;
-    display: block;
-    padding: 21px 13px;
-    margin-top: 20px;
-    border-radius: 10px;
-    background: radial-gradient(295.17% 119.2% at 0% 100%, #537CE5 0%, #91AAEB 100%), radial-gradient(232.91% 127.46% at 6.27% 90.21%, rgba(255, 207, 113, 0.00) 0%, rgba(243, 167, 18, 0.00) 100%);
-}
-
-.promo-feedback p {
-    font-size: 16px;
-    line-height: 1.5;
-    font-weight: 500;
-    color: #fff;
-    max-width: 50%;
-    margin-left: 100px;
-    text-align: left;
-}
-
-.promo-feedback img {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-}
-
-.product-list {
-    width: 100%;
-    height: 100%;
-}
-
-/* CATALOG END*/
-
-/* PRODUCTS START */
-
-.products {
-    width: 100%;
-}
-
-.products__header {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.products__header-right {
-    display: flex;
-    align-items: center;
-    gap: 30px;
-}
-
-.products__header-mobile-btn {
-    display: none;
-}
-
-.rect-btn--product-header-mobile {
-    background-color: var(--main-black);
-    padding: 12px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 8px;
-    font-weight: 400;
-}
-
-.sort {
-    position: relative;
-}
-
-.sort span {
-    font-weight: 500;
-}
-
-.sort-select {
-    border: 2px solid var(--main-blue);
-    background-color: transparent;
-    border-radius: 5px;
-    padding: 6px 20px;
-    margin-left: 10px;
-    cursor: pointer;
-}
-
-.sort::after {
-    content: '';
-    background: url('../img/icons/arrow-filter-blue.svg') center center / cover no-repeat;
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 9px;
-    height: 6px;
-    top: 50%;
-    right: 20px;
-    transform: translateY(-50%);
-    cursor: pointer;
-}
-
-.products-view-buttons {
-    display: flex;
-    gap: 5px;
-}
-
-.products-view-btn {
-    width: 35px;
-    height: 35px;
-    border: 2px solid var(--main-blue);
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.products-view-btn.active {
-    background-color: var(--main-blue);
-}
-
-.products-view-btn.active path {
-    fill: #fff;
-}
-
-.products__main {
-    display: none;
-    gap: 15px;
-    margin-top: 50px;
-}
-
-.products__main.active {
+.catalog__categories {
     display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 35px 50px;
 }
 
-.products__main.tiles {
-    grid-template-columns: repeat(4, 270px);
-    grid-template-rows: 1fr;
-}
-
-.products__main.rows {
-    grid-template-columns: 100%;
-}
-
-.products__main .product-card__footer {
-    position: absolute;
-    max-height: 0;
-    background-color: #fff;
-    z-index: 10;
-    overflow: hidden;
-}
-
-.products__main .product-card {
-    overflow: visible;
-}
-
-.promo-banner.promo-banner--catalog {
-    background-color: #fff;
-    max-height: none;
-}
-
-.products__footer {
-    padding-top: 10px;
-}
-
-.rect-btn--products {
-    width: 100%;
-    font-size: 16px;
-    line-height: 1.5;
+.catalog__categories-box {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    gap: 18px;
 }
 
-.rect-btn--products svg {
-    margin-left: 4px;
-    transform: rotate(180deg);
+.catalog__categories-box img {
+    max-width: 50px;
 }
 
-ul.products-pagination {
-    margin-top: 20px;
+.catalog__categories-list {
     display: flex;
-    gap: 8px;
+    flex-direction: column;
+    gap: 10px;
 }
 
-.products-pagination-btn {
-    width: 32px;
-    height: 32px;
-}
-
-.products-pagination-btn a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    border: 1px solid #EAEBED;
-    border-radius: 5px;
-    background: #fff;
-}
-
-.products-pagination-btn.current a {
-    border-color: var(--main-blue);
-    color: var(--main-blue);
-}
-
-.products-pagination-btn span {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.products-pagination-btn-arrow.disabled a {
-    cursor: default;
-}
-
-.products-pagination-btn-arrow path {
-    transition: var(--default-transition);
-}
-
-.product-card.row {
-    width: 100%;
-    min-height: 280px;
-    padding: 20px;
-    display: flex;
-    background-color: #fff;
-}
-
-.product-card.row .product-card__img-box {
-    width: 200px;
-    height: 200px;
-    border: 1px solid rgba(93, 108, 123, .17);
-    border-radius: 10px;
-    align-self: center;
-}
-
-.product-card.row .label-container {
-    max-width: 100%;
-}
-
-.product-card.row .fast-view-btn {
-    bottom: 0;
-}
-
-.product-card.row .product-card__img-box-link img {
-    height: 100%;
-    object-fit: contain;
-}
-
-.product-card.row .product-card__info-box {
-    display: block;
-    margin-left: 55px;
-    padding: 0;
-}
-
-.product-card.row .product-card__name {
-    margin-top: 0;
-}
-
-.product-card.row .product-info__available {
-    margin-top: 3px;
-    gap: 0;
-}
-
-.product-card.row .product-card__article {
-    margin-top: 0;
-}
-
-.product-card.row .product-info__status {
-    margin-left: 10px;
-}
-
-.product-card.row .product-info__delivery,
-.product-card.row .product-card__article {
-    margin-left: 16px;
-}
-
-.product-card.row .product-card__properties {
-    margin-top: 20px;
-}
-
-.product-card.row .product-card__property {
-    display: flex;
-}
-
-.product-card.row .product-card__property+.product-card__property {
-    margin-top: 5px;
-}
-
-.product-card.row .property-name {
+.catalog__categories-item {
     position: relative;
-    width: 60%;
 }
 
-.product-card.row .property-name span {
-    background-color: #fff;
-    position: relative;
-    z-index: 1;
+.catalog__categories-link {
     color: var(--text-grey-color);
 }
 
-.product-card.row .property-name::before {
-    content: "";
-    position: absolute;
-    border-bottom: 1px dotted #d9d9d9;
-    display: block;
-    width: 100%;
-    left: 0;
-    bottom: 5px;
-}
-
-.product-card.row .product-card__color {
-    padding: 0;
-    margin-top: 20px;
-}
-
-.product-card.row .product-card__color.skeleton::before {
-    border-radius: 0;
-}
-
-.product-card.row .product-card__right {
-    display: flex;
-    margin-left: auto;
-    gap: 15px;
-}
-
-.product-card.row .product-card__prices {
-    margin-top: 0;
-    font-size: 32px;
-    margin-left: 50px;
-}
-
-.product-card.row .product-card__price {
-    font-size: 32px;
-    line-height: 1.5;
-}
-
-.product-card.row .product-card__price-type {
-    font-size: 11px;
-    line-height: 1.5;
-    color: var(--subtitle-color);
-    display: block;
-}
-
-.product-card.row .product-card__right-buy {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.product-card.row .product-card__footer-buttons {
-    display: block;
-}
-
-.product-card__footer-button-row {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-}
-
-.product-card__footer-button-row+.product-card__footer-button-row {
-    margin-top: 8px;
-}
-
-.product-card.row .product-card__buy-cart {
-    border: 1px solid var(--main-blue);
-}
-
-.product-card.row .product-card__buy-click,
-.product-card.row .product-card__buy-cart {
-    width: calc(100% - 55px);
-    border-radius: 5px;
-    padding: 15px 40px;
-    font-size: 16px;
-}
-
-.product-card.row .product-card__buy-click.skeleton,
-.product-card.row .product-card__buy-cart.skeleton {
-    border: none;
-}
-
-.product-card.row .product-card__buy-click.skeleton::before,
-.product-card.row .product-card__buy-cart.skeleton::before {
-    border-radius: 5px;
-}
-
-.product-card.row .product-card__counter {
-    width: 236px;
-    border: 1px solid var(--main-blue);
-    border-radius: 5px;
-    padding: 0;
-}
-
-.product-card.row .product-card__counter button {
-    padding: 15px 0;
-}
-
-.product-card.row .product-card__counter .minus {
-    padding-left: 20px;
-}
-
-.product-card.row .product-card__counter .plus {
-    padding-right: 20px;
-}
-
-/* PRODUCTS END */
-
-/* FEEDBACK BANNER START */
-
-.feedback-banner {
-    background-color: var(--main-blue);
-    padding: 10px 0;
-}
-
-.feedback-banner__inner {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.feedback-banner__text {
+.catalog__categories-link--title {
     font-size: 18px;
-    line-height: 1.5;
-    font-weight: 600;
-    color: #fff;
-    text-transform: uppercase;
+    color: var(--main-black);
 }
-
-.feedback-banner__form {
-    display: flex;
-    gap: 15px;
-}
-
-.feedback-banner__form input {
-    background-color: rgba(255, 255, 255, .2);
-    border-radius: 5px;
-    padding: 15px 25px;
-    width: 410px;
-    color: #fff;
-    font-size: 16px;
-    line-height: 1.5;
-}
-
-.feedback-banner__form input::placeholder {
-    color: #fff;
-    font-size: 16px;
-    line-height: 1.5;
-}
-
-.rect-btn--feedback-banner {
-    font-size: 16px;
-    line-height: 1.5;
-}
-
-/* FEEDBACK BANNER END */
