--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url('./font.css');
 @import url('./global.css');
+@import url('./category.css');
 @import url('./catalog.css');
 @import url('./cart.css');
 @import url('./recs.css');
@@ -1359,7 +1360,6 @@ body.active {
     justify-content: space-between;
     border-radius: 20px;
     transition: var(--default-transition);
-    /* box-shadow: 0px 4px 30px 0px rgba(25, 33, 79, 0.25); */
 }
 
 .complects__item-label {
@@ -1372,6 +1372,7 @@ body.active {
     color: #fff;
     font-size: 24px;
     font-weight: 600;
+    z-index: 1;
 }
 
 .complects__item-img {
