--- a/css/media.css
+++ b/css/media.css
@@ -693,6 +693,9 @@
     .product-info__guarantee-item {
         width: auto;
     }
+    .not-found__content {
+        gap: 50px;
+    }
 }
 
 @media (max-width: 820px) {
@@ -735,6 +738,18 @@
     }
     .product-card:last-child {
         display: none;
+    }
+    .not-found__content {
+        gap: 20px;
+    }
+    .not-found__text {
+        max-width: none;
+    }
+    .not-found__title {
+        font-size: 28px;
+    }
+    .not-found__code p {
+        font-size: 200px;
     }
 }
 
@@ -901,6 +916,12 @@
     }
     .catalog__categories {
         grid-template-columns: repeat(2, 1fr);
+    }
+    .not-found__title {
+        font-size: 28px;
+    }
+    .not-found__code p {
+        font-size: 150px;
     }
 }
 
@@ -1182,6 +1203,18 @@
     .mobile-product-info .product-box__item--properties .property-name {
         width: 65%;
     }
+    .not-found__title {
+        font-size: 22px;
+    }
+    .not-found__descr {
+        margin-top: 15px;
+    }
+    .not-found__code p {
+        font-size: 120px;
+    }
+    .rect-btn--not-found {
+        margin-top: 15px;
+    }
 }
 
 @media (max-width: 500px) {
@@ -1329,6 +1362,12 @@
     }
     .catalog__categories {
         grid-template-columns: 1fr;
+    }
+    .not-found__content {
+        flex-direction: column-reverse;
+        align-items: center;
+        text-align: center;
+        padding: 100px 0;
     }
 }
 
